Refactor:初步重构整个项目

--- a/src/main/resources/templates/author.html
+++ b/src/main/resources/templates/author.html
@@ -49,7 +49,7 @@
             color:#12addb" th:href="@{${url}}" target="_blank">查看回复的完整內容</a>
         </p>
         <div style="color: #8c8c8c; font-size: 10px;width: 100%;text-align: center;word-wrap: break-word;">
-            <p style="padding: 20px">什么都无法舍弃的人，什么都改变不了。——《进击的巨人》</p>
+            <p style="padding: 20px">求知若渴，虚心若愚</p>
         </div>
     </div>
 </div>
