--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -29,7 +29,7 @@
         background-color: hsla(0,0%,100%,.4);
         border-radius: 10px 10px 0 0;">
             来自<a style="text-decoration:none;
-            color: #ffffff;" href="https://www.ttkwsd.top/" target="_blank">優萌初華</a>的邮件
+            color: #ffffff;" href="https://www.ttkwsd.top/" target="_blank">shellyのblog</a>的邮件
         </p>
     </div>
     <div style="margin:20px auto;
@@ -43,7 +43,7 @@
             <p th:utext="${content}"></p>
         </div>
         <div style="color: #8c8c8c; font-size: 10px;width: 100%;text-align: center;word-wrap: break-word;">
-            <p style="padding: 20px">不管当下的境遇如何，提瓦特大陆的星空永远会有你的位置。——《原神》</p>
+            <p style="padding: 20px">求知若渴，虚心若愚</p>
         </div>
     </div>
 </div>
