--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -29,7 +29,7 @@
         background-color: hsla(0,0%,100%,.4);
         border-radius: 10px 10px 0 0;">
             您在<a style="text-decoration:none;
-            color: #ffffff;" href="https://www.ttkwsd.top/" target="_blank">優萌初華</a>上的留言有新回复啦！
+            color: #ffffff;" href="https://www.ttkwsd.top/" target="_blank">shellyのblog</a>上的留言有新回复啦！
         </p>
     </div>
     <div style="margin:20px auto;
@@ -58,10 +58,10 @@
             您可以点击<a style="text-decoration:none;
             color:#12addb" target="_blank" th:href="@{${url}}">查看回复的完整內容</a>
             ，欢迎再次光临<a style="text-decoration:none;
-            color:#12addb" href="https://www.ttkwsd.top/" target="_blank"> 優萌初華</a>。
+            color:#12addb" href="https://www.ttkwsd.top/" target="_blank">shellyのblog</a>。
         </p>
         <div style="color: #8c8c8c; font-size: 10px;width: 100%;text-align: center;word-wrap: break-word;">
-            <p style="padding: 20px">不管当下的境遇如何，提瓦特大陆的星空永远会有你的位置。——《原神》</p>
+            <p style="padding: 20px">求知若渴，虚心若愚</p>
         </div>
     </div>
 </div>
