--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -29,7 +29,7 @@
         background-color: hsla(0,0%,100%,.4);
         border-radius: 10px 10px 0 0;">
             来自<a style="text-decoration:none;
-            color: #ffffff;" href="http://121.37.19.240:1314" target="_blank">shellyのblog</a>的邮件
+            color: #ffffff;" href="https://shelly.org.cn/" target="_blank">shellyのblog</a>的邮件
         </p>
     </div>
     <div style="margin:20px auto;
